revision history for NetPacket

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

1.4.0 2013-08-26
 [DOCUMENTATION]
 - Fixing NetPacked::UDP documentation. (RT#85361, Ben Magistro)

 [ENHANCEMENTS]
 - New NetPacket::USBMon. (GH#2, lkundrak)

 [STATISTICS]
 - code churn: 8 files changed, 595 insertions(+), 16 deletions(-)

1.3.3 2013-05-15
 [BUG FIXES]
 - Parse SACK option and fix TSecr parsing. (GH#1, Robin Lee)

 [STATISTICS]
 - code churn: 5 files changed, 46 insertions(+), 7 deletions(-)

1.3.2 2013-05-03
 [BUG FIXES]
 - Fix NetPacket::UDP's strip. (RT#85038, reported by Stan Schwertly)

 [STATISTICS]
 - code churn: 12 files changed, 71 insertions(+), 21 deletions(-)

1.3.1 2011-11-23
 [BUG FIXES]
 - Use of constant withotu parenthesis made test fail under 5.6.2.

1.3.0 2011-11-13
 [ENHANCEMENTS]
 - 'parse_tcp_options()' method added to NetPacket::TCP (patch by Tom
   Linden) [RT#71320]

1.2.0 2011-07-26
 [ENHANCEMENTS]
 - Add support for Ethernet VLAN (thanks to Kai Chan)

1.1.2 2011-06-20
 [BUG FIXES]
 - Add a INSTALL file

1.1.1 2011-02-07
 - Add the new Ethernet types to the export list.  (thanks to Sergey, again
   :-) ) (RT#64799)

1.1.0 2011-01-15
 - Add a few Ethernet types. (thanks to Sergey) (RT#64799)

1.0.1 2010-10-19
 - Make the example verbatim in pod in NetPacket::UDP (rt#62097)

1.0.0 2010-10-17
 - Remove modules NetPacket::ICMPv6, NetPacket::IPv6 and NetPacket::PFLog
   as the license of the patch clashes with the license of the
   distribution. (RT#62197)

0.41_0
 - Fixed bug 18941 - NetPacket::IP includes trailing  trash bytes in
   $ip->{data}
 - Fixed bug 7010 - IP flags field lost in IP::encode()
 - Added Build.PL 
 - Moved history off the README file into this one (Changes)
 - Moved module structure to /lib
 - Version now gathered from NetPacket.pm
 - META.yml added to MANIFEST
 - Added myself (Yanick) as author
 - Switched to major.minor.revision version notation

0.43.2 2010-10-11