@@ -4,7 +4,6 @@ use warnings;
 use Test::More tests => 103;
 
 use NetPacket::USBMon qw/:ALL/;
-use Errno qw(:POSIX);
 
 my $frame;
 my $usbmon;
@@ -29,7 +28,7 @@ is $usbmon->{busnum} => 3;
 is $usbmon->{flag_setup} => USB_FLAG_SETUP_RELEVANT;
 is $usbmon->{ts_sec} => 1376576584;
 is $usbmon->{ts_usec} => 448303;
-is $usbmon->{status} => -(EINPROGRESS);
+is $usbmon->{status} => -115;
 is $usbmon->{length} => 40;
 is $usbmon->{len_cap} => 0;
 is $usbmon->{xfer_flags} => 0x200;
@@ -79,7 +78,7 @@ is $usbmon->{busnum} => 3;
 is $usbmon->{flag_setup} => USB_FLAG_SETUP_RELEVANT;
 is $usbmon->{ts_sec} => 1376576613;
 is $usbmon->{ts_usec} => 483875;
-is $usbmon->{status} => -(EINPROGRESS);
+is $usbmon->{status} => -115;
 is $usbmon->{length} => 0;
 is $usbmon->{len_cap} => 0;
 is $usbmon->{xfer_flags} => 0;
@@ -132,7 +131,7 @@ is $usbmon->{busnum} => 3;
 is $usbmon->{flag_setup} => USB_FLAG_SETUP_RELEVANT;
 is $usbmon->{ts_sec} => 1376576613;
 is $usbmon->{ts_usec} => 483875;
-is $usbmon->{status} => -(EINPROGRESS);
+is $usbmon->{status} => -115;
 is $usbmon->{length} => 0;
 is $usbmon->{len_cap} => 0;
 is $usbmon->{xfer_flags} => 0;
@@ -188,7 +187,7 @@ is $usbmon->{busnum} => 3;
 is $usbmon->{flag_setup} => USB_FLAG_SETUP_IRRELEVANT;
 is $usbmon->{ts_sec} => 1376576613;
 is $usbmon->{ts_usec} => 530110;
-is $usbmon->{status} => -(EINPROGRESS);
+is $usbmon->{status} => -115;
 is $usbmon->{length} => 24576;
 is $usbmon->{len_cap} => 128;
 is $usbmon->{xfer_flags} => 514;
